RistoranteDAO: - Aggiunta di mapping centralizzato. - Modifica del update dei ristoranti con campo tipizzato. - Aggiunga di ricerca per tutti i ristoranti. - Aggiunta di ricerca (save version) e del controllo esistenza del ristorante.
pom.xml:
- aggiunta dipendenza per e cambio di cifratura (BCrypt)

- Creazione package security e PasswordUtils per conversione da hash SHA-256 a BCrypt

UtenteDAO:
- Modifica di alcuni metodi già presenti.
- Aggiunta di metodi per la cancellazione, l'aggiornamento, il trova tutti gli utenti.
- Aggiunta metodi per la gestione della password
- Aggiunta del mapper

- Creazione del package service e della classe AuthService

AuthService:
- Spostamento del login in